--- a/styles/main.css
+++ b/styles/main.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  padding: 0;
 }
 
 p {
@@ -8,126 +9,282 @@ p {
   font-size: 13px;
 }
 
-nav {
-  display: none;
-}
-
-.mobile-main-header {
-  height: 64px;
-  border-bottom: 1px solid black;
-}
-.mobile-main-header .mobile-main-header-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-.mobile-main-header .mobile-main-header-container .left-section {
-  height: 64px;
-  display: flex;
-  align-items: center;
-}
-.mobile-main-header .mobile-main-header-container .left-section .mobile-user-icon {
-  width: 28px;
-  height: 28px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-.mobile-main-header .mobile-main-header-container .left-section .mobile-notification-icon {
-  width: 26px;
-  height: 26px;
-  padding-left: 11px;
-  padding-right: 11px;
-}
-.mobile-main-header .mobile-main-header-container .middle-section {
-  height: 64px;
-  display: flex;
-  align-items: center;
-}
-.mobile-main-header .mobile-main-header-container .middle-section .mobile-bbc-logo {
-  width: 112px;
-  height: 32px;
-}
-.mobile-main-header .mobile-main-header-container .right-section {
-  height: 64px;
-  display: flex;
-  align-items: center;
-}
-.mobile-main-header .mobile-main-header-container .right-section .mobile-menu-icon {
-  width: 24px;
-  height: 22px;
-  padding-left: 12px;
-  padding-right: 12px;
-}
-.mobile-main-header .mobile-main-header-container .right-section .mobile-search-icon {
-  width: 28px;
-  height: 29px;
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
-.mobile-secondary-header {
-  height: 58px;
-  border-bottom: 1px solid black;
-  background-color: #FFD230;
-}
-.mobile-secondary-header .mobile-secondary-header-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  align-items: center;
-  padding-left: 16px;
-  padding-right: 16px;
-  height: 58px;
-}
-.mobile-secondary-header .mobile-secondary-header-container .mobile-BBC-Sports-text {
-  height: 30px;
-}
-.mobile-secondary-header .mobile-secondary-header-container .all-sports {
-  border: 1px solid black;
-  padding: 7px;
-  margin-left: 1px;
-  margin-right: 1px;
-}
-.mobile-secondary-header .mobile-secondary-header-container .all-sports .mobile-secondary-menu-icon {
-  width: 14px;
-  height: 13px;
-}
-.mobile-secondary-header .mobile-secondary-header-container .all-sports .menu-text {
-  margin-left: 5px;
-}
-
-.mobile-hero {
-  padding-top: 16px;
-  height: 423px;
-}
-.mobile-hero .mobile-main-article-container {
-  width: 503px;
-  padding-left: 16px;
-  padding-right: 16px;
-}
-.mobile-hero .mobile-main-article-container .top-column {
-  display: flex;
-  align-items: center;
-}
-.mobile-hero .mobile-main-article-container .top-column .main-article-thumbnail {
-  width: 503px;
-}
-.mobile-hero .mobile-main-article-container .bottom-column .main-article-title {
-  font-family: Arial;
-  font-weight: bold;
-  font-size: 25px;
-  margin-top: 10px;
-  margin-bottom: 0;
-}
-.mobile-hero .mobile-main-article-container .bottom-column .main-article-opening {
-  color: gray;
-  font-weight: normal;
-  font-size: 14px;
-}
-.mobile-hero .mobile-main-article-container .bottom-column .main-article-tag {
-  color: green;
-  font-weight: normal;
-  padding-top: 5px;
+@media (max-width: 600px) {
+  .mobile-main-header {
+    height: 64px;
+    border-bottom: 1px solid black;
+  }
+  .mobile-main-header nav {
+    display: none;
+  }
+  .mobile-main-header .mobile-main-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .mobile-main-header .mobile-main-header-container .left-section {
+    height: 64px;
+    display: flex;
+    align-items: center;
+  }
+  .mobile-main-header .mobile-main-header-container .left-section .mobile-user-icon {
+    width: 28px;
+    height: 28px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .mobile-main-header .mobile-main-header-container .left-section .mobile-notification-icon {
+    width: 26px;
+    height: 26px;
+    padding-left: 11px;
+    padding-right: 11px;
+  }
+  .mobile-main-header .mobile-main-header-container .middle-section {
+    height: 64px;
+    display: flex;
+    align-items: center;
+  }
+  .mobile-main-header .mobile-main-header-container .middle-section .mobile-bbc-logo {
+    width: 112px;
+    height: 32px;
+  }
+  .mobile-main-header .mobile-main-header-container .right-section {
+    height: 64px;
+    display: flex;
+    align-items: center;
+  }
+  .mobile-main-header .mobile-main-header-container .right-section .mobile-menu-icon {
+    width: 24px;
+    height: 22px;
+    padding-left: 12px;
+    padding-right: 12px;
+  }
+  .mobile-main-header .mobile-main-header-container .right-section .mobile-search-icon {
+    width: 28px;
+    height: 29px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
+  .mobile-secondary-header {
+    height: 58px;
+    border-bottom: 1px solid black;
+    background-color: #FFD230;
+  }
+  .mobile-secondary-header .mobile-secondary-header-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding-left: 16px;
+    padding-right: 16px;
+    height: 58px;
+  }
+  .mobile-secondary-header .mobile-secondary-header-container .mobile-BBC-Sports-text {
+    height: 30px;
+  }
+  .mobile-secondary-header .mobile-secondary-header-container .all-sports {
+    border: 1px solid black;
+    padding: 7px;
+    margin-left: 1px;
+    margin-right: 1px;
+  }
+  .mobile-secondary-header .mobile-secondary-header-container .all-sports .mobile-secondary-menu-icon {
+    width: 14px;
+    height: 13px;
+  }
+  .mobile-secondary-header .mobile-secondary-header-container .all-sports .menu-text {
+    margin-left: 5px;
+  }
+  .mobile-hero {
+    padding-top: 16px;
+  }
+  .mobile-hero .mobile-main-article-container {
+    min-width: 451px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .mobile-hero .mobile-main-article-container .top-column .main-article-thumbnail {
+    width: 100%;
+  }
+  .mobile-hero .mobile-main-article-container .bottom-column .main-article-title {
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  .mobile-hero .mobile-main-article-container .bottom-column .main-article-opening {
+    color: gray;
+    font-weight: normal;
+    font-size: 14px;
+  }
+  .mobile-hero .mobile-main-article-container .bottom-column .main-article-tag {
+    color: green;
+    font-weight: normal;
+    padding-top: 5px;
+    margin: 0;
+  }
+  .secondary-section {
+    margin-top: 20px;
+  }
+  .secondary-section .mobile-secondary-articles-container {
+    display: flex;
+    flex-direction: row;
+    min-width: 451px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .secondary-section .mobile-secondary-articles-container .left-article {
+    min-width: 222px;
+    margin-right: 7px;
+  }
+  .secondary-section .mobile-secondary-articles-container .left-article .top-column .secondary-article-thumbnail {
+    width: 100%;
+  }
+  .secondary-section .mobile-secondary-articles-container .left-article .bottom-column .secondary-article-title {
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  .secondary-section .mobile-secondary-articles-container .left-article .bottom-column .secondary-article-tag {
+    color: green;
+    font-weight: normal;
+    padding-top: 5px;
+  }
+  .secondary-section .mobile-secondary-articles-container .right-article {
+    min-width: 222px;
+  }
+  .secondary-section .mobile-secondary-articles-container .right-article .top-column .secondary-article-thumbnail {
+    width: 100%;
+  }
+  .secondary-section .mobile-secondary-articles-container .right-article .bottom-column .secondary-article-title {
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 10px;
+    margin-bottom: 0;
+  }
+  .secondary-section .mobile-secondary-articles-container .right-article .bottom-column .secondary-article-tag {
+    color: green;
+    font-weight: normal;
+    padding-top: 5px;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container {
+    min-width: 451px;
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article {
+    padding-top: 16px;
+    padding-bottom: 8px;
+    border-top: 1px solid black;
+    display: flex;
+    flex-direction: row;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article .left-column,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article .left-column, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article .left-column,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article .left-column {
+    min-width: 228px;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article .left-column .secondary-article-thumbnail,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article .left-column .secondary-article-thumbnail, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article .left-column .secondary-article-thumbnail,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article .left-column .secondary-article-thumbnail {
+    width: 100%;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article .right-column,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article .right-column, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article .right-column,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article .right-column {
+    min-width: 223px;
+    margin-left: 10px;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article .right-column .secondary-article-title,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article .right-column .secondary-article-title, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article .right-column .secondary-article-title,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article .right-column .secondary-article-title {
+    font-family: Arial;
+    font-weight: bold;
+    font-size: 15px;
+    margin-top: 0px;
+    margin-bottom: 0;
+  }
+  .further-secondary-section .mobile-further-secondary-articles-container .third-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .fourth-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .fifth-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .sixth-secondary-article .right-column .secondary-article-tag,
+.further-secondary-section .mobile-further-secondary-articles-container .seventh-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .eighth-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .ninth-secondary-article .right-column .secondary-article-tag, .further-secondary-section .mobile-further-secondary-articles-container .tenth-secondary-article .right-column .secondary-article-tag,
+.further-secondary-section .mobile-further-secondary-articles-container .eleventh-secondary-article .right-column .secondary-article-tag {
+    color: green;
+    font-weight: normal;
+    padding-top: 5px;
+  }
+  .social-media-section {
+    padding-left: 16px;
+    cursor: pointer;
+  }
+  .social-media-section .social-media-header {
+    font-family: ReithSans, Helvetica, Arial, freesans, sans-serif;
+    font-weight: 700;
+    font-size: 1.25rem;
+    margin: 0;
+    padding-top: 16px;
+    padding-bottom: 16px;
+  }
+  .social-media-section .social-media-grid {
+    display: grid;
+    grid-template-columns: 151px 151px;
+    -moz-column-gap: 0px;
+         column-gap: 0px;
+    row-gap: 0px;
+  }
+  .social-media-section .social-media-grid .app-logo-row {
+    width: 132px;
+    padding-left: 9.5px;
+  }
+  .social-media-section .social-media-grid .app-logo-row .app-logo {
+    width: 100%;
+  }
+  .social-media-section .social-media-grid .twitter:hover, .social-media-section .social-media-grid .facebook:hover, .social-media-section .social-media-grid .instagram:hover, .social-media-section .social-media-grid .youtube:hover {
+    cursor: pointer;
+  }
+  .social-media-section .social-media-grid .twitter:hover .app-name, .social-media-section .social-media-grid .facebook:hover .app-name, .social-media-section .social-media-grid .instagram:hover .app-name, .social-media-section .social-media-grid .youtube:hover .app-name {
+    color: green;
+    text-decoration: underline;
+  }
+  nav.menu-btn {
+    display: block;
+  }
+  nav {
+    position: absolute;
+    z-index: 999;
+    width: 100%;
+    right: 0;
+    top: 64px;
+    background-color: white;
+    height: 350px;
+    padding: 1em;
+    border: 1px solid black;
+  }
+  nav ul.main-nav {
+    margin-top: 32px;
+  }
+  nav li {
+    list-style: none;
+  }
+  nav li a {
+    color: black;
+    text-decoration: none;
+    display: block;
+    padding: 0.5em;
+    font-size: 1.3em;
+    text-align: left;
+  }
+  nav li a:hover {
+    font-weight: bold;
+  }
+  .mobile-menu-exit {
+    float: right;
+    width: 32px;
+  }
 }/*# sourceMappingURL=main.css.map */
